--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,37 +1,58 @@
-$tipografia-principal: 'Quicksand', sans-serif;
-$tipografia-secundaria: 'Montserrat', sans-serif;
+$tipografia-principal: "Quicksand", sans-serif;
+$tipografia-secundaria: "Montserrat", sans-serif;
 
 html {
-    font-size: 25px;
+  font-size: 23px;
+}
+
+body {
+  width: 100%;
+  background-size: 300% 300%;
+  background-image: linear-gradient(
+    -45deg,
+    #03d6e9 0%,
+    #026972 25%,
+    #01484e 50%,
+    #000000 100%
+  );
+  animation: AnimateBG 12s ease infinite;
+  @keyframes AnimateBG { 
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+  }
+  // background: linear-gradient(180deg, rgba(24,71,67,1) 4%, rgba(0,0,0,1) 45%, rgba(0,0,0,1) 55%, rgba(24,71,67,1) 96%);
+  // background: linear-gradient(140deg, rgba(0,0,0,1) 0%, rgba(3,8,8,1) 45%, rgba(33,82,87,1) 85%, rgba(46,113,120,1) 96%, rgba(51,132,140,1) 99%);
 }
 
 .App {
-    font-family: $tipografia-principal;
-    background: linear-gradient(140deg, rgba(0,0,0,1) 0%, rgba(3,8,8,1) 45%, rgba(33,82,87,1) 85%, rgba(46,113,120,1) 96%, rgba(51,132,140,1) 99%);
-    // background: radial-gradient(circle, rgba(23,53,56,1) 0%, rgba(0,0,0,1) 100%);
-    height: 100vmax;
+  font-family: $tipografia-principal;
+  // background: radial-gradient(circle, rgba(23,53,56,1) 0%, rgba(0,0,0,1) 100%);
 }
 
 .container {
-    h1 {
-        font-family: $tipografia-secundaria;
-    }
+  h1 {
+    font-family: $tipografia-secundaria;
+  }
 
-    p {
-        font-family: $tipografia-secundaria;
-    }
+  p {
+    font-family: $tipografia-secundaria;
+  }
 }
-
 
 .animate__fadeInUp {
-    animation-delay: 1s;
+  animation-delay: 1s;
 }
 
+.animate__fadeInLeft {
+    margin-top: 200px;
+    animation-delay: 2s;
+}
+ 
 .card {
-    width: 15rem !important;
+  width: 15rem !important;
 }
 
 .btn-primary {
-    background-color: rgba(51,132,140,1) !important;
-    border: none !important;
+    background-color: rgb(2, 123, 134) !important;
 }
