--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,5 @@
-$mainColor: #551f6b;
-$secondaryColor: #623674;
+$mainColor: #e9b824;
+$secondaryColor: #967c34;
 $tipografia-principal: "Quicksand", sans-serif;
 $tipografia-secundaria: "Montserrat", sans-serif;
 
@@ -8,48 +8,35 @@ html {
 }
 
 body {
-  // background: #6c70d6 !important;
-  // background: #251B37 !important;
-  animation-iteration-count: 1;
-  // background: linear-gradient(-45deg, #6A00BB, #240530, #6A00BB, #6A00BB);
-  background: linear-gradient(-45deg, #000000, #bf74dd, #000000, #000000);
-  background-size: 400% 400%;
-  animation: gradient 5s ease forwards;
+  // animation-iteration-count: 1;
+  // background: linear-gradient(-45deg, #000000, #bf74dd, #000000, #000000);
+  // background-size: 400% 400%;
+  // animation: gradient 5s ease forwards;
 
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    100% {
-      background-position: 40% 50%;
-    }
-  }
+  // @keyframes gradient {
+  //   0% {
+  //     background-position: 0% 50%;
+  //   }
+  //   100% {
+  //     background-position: 40% 50%;
+  //   }
+  // }
 
   &::-webkit-scrollbar {
     display: none;
   }
 }
 
-#Projects, #Skills {
-
-  // background: $secondaryColor no-repeat center fixed;
-  // background: #51557E no-repeat center fixed;
-  background-size: cover;
-}
-
 #Projects, #Skills, #Footer {
-  // background: linear-gradient(320deg, rgba(16,11,20,1) 0%, rgba(66,40,76,1) 100%);
-  // background-size: cover;
-  background: linear-gradient(100deg, rgba(16,11,20,1) 0%, rgb(44, 27, 51) 100%);
-  background-size: cover;
+  background-color: #d3b049;
 }
-#About, #Contact {
-  background: linear-gradient(100deg, rgba(16,11,20,1) 0%, rgba(66,40,76,1) 100%);
-  background-size: cover;
+#Home ,#About, #Contact {
+  background-color: #1f1f1f;
 }
-
-
-
+#Footer {
+  min-height: 25vh !important;
+  background-color: #2b2b2b;
+}
 
 .App {
   font-family: $tipografia-principal;
@@ -75,7 +62,9 @@ body {
 }
 
 .card {
-  width: 15rem !important;
+  align-self: center;
+  width: 100% !important;
+  max-width: 15rem !important;
 }
 
 .card-text {
@@ -142,7 +131,6 @@ section {
   }
 }
 
-
 .nav-link {
   position: relative;
   transition: all 0.5s;
@@ -155,7 +143,7 @@ section {
     margin: auto;
     width: 0%;
     content: "";
-    background: #aaa;
+    background: $mainColor;
     height: 1px;
   }
 
@@ -164,10 +152,6 @@ section {
       width: 100%;
     }
   }
-}
-
-#Footer {
-  min-height: 30vh !important;
 }
 
 .lng-btns {
@@ -183,6 +167,7 @@ section {
 }
 
 .map-img {
+  transition: all 150ms ease-in-out; 
   min-width: 110px !important;
 }
 
@@ -194,4 +179,9 @@ section {
     transition: all 150ms ease-in-out; 
     transform: scale(1.1);
   }
+}
+
+.card-img-top {
+  height: 8rem;
+  object-fit: cover;
 }
