--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,27 +8,13 @@ html {
 }
 
 body {
-  // animation-iteration-count: 1;
-  // background: linear-gradient(-45deg, #000000, #bf74dd, #000000, #000000);
-  // background-size: 400% 400%;
-  // animation: gradient 5s ease forwards;
-
-  // @keyframes gradient {
-  //   0% {
-  //     background-position: 0% 50%;
-  //   }
-  //   100% {
-  //     background-position: 40% 50%;
-  //   }
-  // }
-
   &::-webkit-scrollbar {
     display: none;
   }
 }
 
 #Projects, #Skills, #Footer {
-  background-color: #d3b049;
+  background-color: #c09a27;
 }
 #Home ,#About, #Contact {
   background-color: #1f1f1f;
@@ -107,7 +93,7 @@ section {
   border-color: $secondaryColor !important;
   &:hover,
   &:focus {
-    box-shadow: 0px 0px 20px $secondaryColor !important;
+    box-shadow: 0px 0px 12px $secondaryColor !important;
   }
 }
 
@@ -169,6 +155,7 @@ section {
 .map-img {
   transition: all 150ms ease-in-out; 
   min-width: 110px !important;
+  max-height: 110px;
 }
 
 .skill-card {
