--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -7,13 +7,96 @@ html {
   font-size: 23px;
 }
 
+.cards-section {
+  @media (max-width: 767px) {
+    margin-top: -50px;
+  }
+  @media (max-width: 567px) {
+    margin-top: 20px;
+  }
+  @media (min-width: 768px) {
+    margin-top: 30px;
+  }
+}
+
+.exp-timeline {
+  width: 100px;
+  height: 50px;
+  transform: rotate(90deg);
+  letter-spacing: 12px;
+  margin-left: 80px;
+  margin-right: 10px;
+  margin-top: 15px;
+}
+
+.exp-period {
+  color: #bebebe;
+  font-size: 0.9rem;
+  @media (max-width: 767px) {
+    font-size: 0.7rem;
+  }
+}
+
+strong {
+  font-size: 70px;
+  padding-bottom: 60px;
+  color: #2e2e2ec4;
+}
+
+.pre-strong {
+  padding-bottom: 10px;
+}
+
+.exp-description {
+  @media (max-width: 767px) {
+    font-size: 0.8rem;
+  }
+  @media (min-width: 768px) and (max-width: 1000px) {
+    font-size: 0.9rem;
+  }
+  @media (min-width: 1001px) and (max-width: 1199px) {
+    font-size: 1rem;
+  }
+  @media (min-width: 1200px) {
+    font-size: 1.05rem;
+  }
+  text-wrap: pretty !important;
+}
+
+.exp-card-img {
+  width: 100px;
+  object-fit: cover;
+  @media (max-width: 767px) {
+    width: 50px;
+  }
+}
+
+.exp-link {
+  font-size: 1.7rem;
+  color: rgb(44, 44, 44) !important;
+  text-decoration: none !important;
+  text-decoration-color: #755e17 !important;
+  transition: all 150ms ease-in-out;
+  &:hover {
+    text-decoration: underline 2px !important;
+    text-underline-offset: 5px;
+    text-decoration-color: #755e17 !important;
+    opacity: 0.8;
+    transition: all 150ms ease-in-out;
+  }
+  @media (max-width: 767px) {
+    font-size: 1.3rem;
+  }
+}
+
 body {
   &::-webkit-scrollbar {
     display: none;
   }
 }
 
-#Skills, #Footer {
+#Skills,
+#Footer {
   background-color: #c09a27;
 }
 
@@ -63,6 +146,19 @@ body {
   p {
     font-family: $tipografia-secundaria;
   }
+}
+
+.underline-yellow {
+  text-decoration: underline;
+  text-decoration-color: #e9b82475;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 7px;
+}
+.underline-black {
+  text-decoration: underline;
+  text-decoration-color: #3333335e;
+  text-decoration-thickness: 2px;
+  text-underline-offset: 7px;
 }
 
 .animate__fadeInUp {
@@ -165,7 +261,7 @@ section {
     height: 1px;
   }
 
-  &:hover {  
+  &:hover {
     &::after {
       width: 100%;
     }
@@ -174,9 +270,9 @@ section {
 
 .lng-btns {
   color: white;
-  
+
   label {
-    color: gray ;
+    color: gray;
 
     &:hover {
       color: white !important;
@@ -185,17 +281,16 @@ section {
 }
 
 .map-img {
-  transition: all 150ms ease-in-out; 
+  transition: all 150ms ease-in-out;
   min-width: 80px !important;
   max-height: 80px;
   @media (min-width: 768px) {
     min-width: 100px !important;
     max-height: 100px;
-   }
-  @media (min-width: 992px) { 
+  }
+  @media (min-width: 992px) {
     min-width: 110px !important;
     max-height: 110px;
-
   }
 }
 
@@ -203,8 +298,8 @@ section {
   width: 5rem !important;
   @media (min-width: 768px) {
     width: 6rem !important;
-   }
-  @media (min-width: 992px) { 
+  }
+  @media (min-width: 992px) {
     width: 7rem !important;
   }
 }
@@ -213,15 +308,15 @@ section {
   font-size: 21px;
   @media (min-width: 768px) {
     font-size: 24px;
-   }
-  @media (min-width: 992px) { 
-    font-size: larger
-  } 
+  }
+  @media (min-width: 992px) {
+    font-size: larger;
+  }
 }
 
 .skill-hover-effect {
   :hover {
-    transition: all 150ms ease-in-out; 
+    transition: all 150ms ease-in-out;
     transform: scale(1.1);
   }
 }
