Added functionality to call/email/copy buttons

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -189,6 +189,7 @@ body {
 }
 
 .btn-contact {
+  cursor: pointer;
   color:black;
   text-decoration: none;
   background-color: #c7a94e !important;
