--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -20,6 +20,16 @@
    }
 }
 
+.selectable-yellow ::selection {
+  background-color: #b89302;
+  color: #141413;
+}
+
+.selectable-black ::selection {
+  background-color: #141413;
+  color: #b89302;
+}
+
 .main-btn {
   --btn-bg-1: #d6b142;
   --btn-bg-2: #b48d18;
@@ -42,17 +52,23 @@
 .timeline-line::before {
   content: "";
   position: absolute;
-  left: -3.2rem; /* Ajustar si necesario */
+  left: -1rem; /* valor por defecto */
   top: 0;
   width: 2px;
-  height: 100%;
-  background-color: var(--color-black-main);
+  height: 420px;
+  background-color: #4b4939;
+}
+
+@media (min-width: 40rem) {
+  .timeline-line::before {
+    left: -3.2rem; /* o el nuevo valor que quieras */
+  }
 }
 
 .timeline-circle::before {
   content: "";
   position: absolute;
-  left: -3.5rem;
+  left: -1.3rem;
   top: 50%;
   transform: translateY(-50%);
   width: 0.7rem;
@@ -64,13 +80,29 @@
 .timeline-circle::after {
   content: "";
   position: absolute;
-  left: -3.28rem;
+  left: -1.08rem;
   top: 50%;
   transform: translateY(-50%);
   width: 0.25rem;
   height: 0.25rem;
   background-color: var(--color-yellow-main);
   border-radius: 50%;
+}
+
+@media (min-width: 40rem) {
+  .timeline-circle::before {
+    left: -3.5rem;
+  }
+}
+@media (min-width: 40rem) {
+  .timeline-circle::after {
+    left: -3.28rem;
+  }
+}
+
+* {
+  scrollbar-color: #cea425 #1f1f1f;
+  scrollbar-width: thin;
 }
 
 html {
@@ -82,24 +114,8 @@ html {
   scroll-behavior: smooth;
 }
 
-body {
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
 .App {
   font-family: "Quicksand", sans-serif;
-}
-
-.cards-section {
-  margin-top: 30px;
-}
-
-@media (min-width: 768px) {
-  .cards-section {
-    margin-top: 40px;
-  }
 }
 
 .exp-description {
@@ -125,31 +141,6 @@ body {
   }
 }
 
-.exp-card-img,
-.exp-tech-img {
-  object-fit: cover;
-}
-
-@media (max-width: 767px) {
-  .exp-card-img {
-    width: 50px;
-  }
-}
-
-.exp-card-img {
-  width: 100px;
-}
-
-.exp-tech-img {
-  width: 30px;
-}
-
-@media (max-width: 767px) {
-  .exp-tech-img {
-    width: 25px;
-  }
-}
-
 .exp-link {
   font-size: 1.3rem;
   color: rgb(44, 44, 44);
@@ -171,19 +162,11 @@ body {
 }
 
 /* Secciones */
-#Skills, #Footer, #Projects {
+#Footer {
   background-color: var(--color-bg-yellow);
 }
 
-#About {
-  background-color: var(--color-bg-black);
-}
-
-#Home,
-#Projects,
-#Skills,
-#About,
-#Contact {
+#Home {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -191,18 +174,11 @@ body {
   min-height: 100vh;
 }
 
-#Projects {
-  justify-content: flex-start;
-}
-
-#Home,
-#Skills,
-#About {
+#Home {
   min-height: 750px;
 }
 
-#Home,
-#Contact {
+#Home {
   background-color: var(--color-bg-black);
 }
 
@@ -353,90 +329,19 @@ body {
   color: white !important;
 }
 
-/* Skills */
-.map-img {
-  transition: all 150ms ease-in-out;
-  min-width: 80px !important;
-  max-height: 80px;
-}
-
-@media (min-width: 768px) {
-  .map-img {
-    min-width: 100px !important;
-    max-height: 100px;
-  }
-}
-
-@media (min-width: 992px) {
-  .map-img {
-    min-width: 95px !important;
-    max-height: 95px;
-  }
-}
-
-.skill-card {
-  width: 6rem !important;
-}
-
-@media (min-width: 992px) {
-  .skill-card {
-    width: 7rem !important;
-  }
-}
-
-.skills-container {
-  margin-bottom: 80px;
-}
-
-@media (max-width: 350px) {
-  .skills-container {
-    margin-bottom: 240px;
-  }
-}
-
-@media (min-width: 351px) and (max-width: 437px) {
-  .skills-container {
-    margin-bottom: 160px;
-  }
-}
-
-@media (min-width: 438px) and (max-width: 768px) {
-  .skills-container {
-    margin-bottom: 150px;
-  }
-}
-
-@media (min-width: 769px) and (max-width: 1017px) {
-  .skills-container {
-    margin-bottom: 140px;
-  }
-}
-
-.skill-title {
-  font-size: 20px;
-}
-
-@media (min-width: 768px) {
-  .skill-title {
-    font-size: 21px;
-  }
-}
-
-@media (min-width: 992px) {
-  .skill-title {
-    font-size: 23px;
-  }
-}
-
-.skill-img-container {
-  transition: all 200ms ease-in-out;
+.skill-hover-effect {
+  transition: filter 200ms ease-in-out;
   filter: grayscale(100%);
 }
 
-.skill-img-container:hover {
+.skill-hover-effect:hover {
   filter: none;
 }
 
-.skill-img-container:hover .map-img {
+.skill-hover-effect img {
+  transition: filter 200ms ease-in-out;
+}
+
+.skill-hover-effect:hover img {
   filter: drop-shadow(20px 5px 4px rgba(126, 126, 126, 0.74));
 }
