--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,4 +1,3 @@
-/* Variables de CSS */
 @import "tailwindcss";
 
 @theme { 
@@ -25,6 +24,13 @@
   .text-title {
     @apply text-2xl sm:text-3xl md:text-[2.15rem];
   }
+  .wave-section {
+    @apply w-[100dvw] pointer-events-none select-none -my-px sm:-my-3;
+  }
+}
+
+.wave-section {
+  filter: drop-shadow(0px -60px 20px #1b1b1b);
 }
 
 .visit-web-font {
