Little shadow fix

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,7 +30,7 @@
 }
 
 .wave-section {
-  filter: drop-shadow(0px -60px 20px #1b1b1b);
+  filter: drop-shadow(0px -28px 11px #181818);
 }
 
 .visit-web-font {
