--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -29,14 +29,31 @@
   }
 }
 
+* {
+  scrollbar-color: #cea425 #1f1f1f;
+  scrollbar-width: thin;
+}
+
+html {
+  font-size: 23px;
+  background-color: var(--color-bg-black);
+}
+
+.App {
+  font-family: "Quicksand", sans-serif;
+}
+
+/* Shadow effect for waves */
 .wave-section {
   filter: drop-shadow(0px -28px 11px #181818);
 }
 
+/* Font for wrok experience link */
 .visit-web-font {
   font-family: "Barlow Condensed", sans-serif;
 }
 
+/* Styles on text selection */
 .selectable-yellow ::selection {
   background-color: #b89302;
   color: #141413;
@@ -47,6 +64,7 @@
   color: #b89302;
 }
 
+/* Main CV button effect */
 .main-btn {
   --btn-bg-1: #d6b142;
   --btn-bg-2: #b48d18;
@@ -66,6 +84,7 @@
   background-position: right top;
 }
 
+/* Timeline line and circle */
 .timeline-line::before {
   content: "";
   position: absolute;
@@ -127,160 +146,14 @@
   }
 }
 
-* {
-  scrollbar-color: #cea425 #1f1f1f;
-  scrollbar-width: thin;
-}
-
-html {
-  font-size: 23px;
-  background-color: var(--color-bg-black);
-}
-
-.App {
-  font-family: "Quicksand", sans-serif;
-}
-
-.exp-link {
-  font-size: 1.3rem;
-  color: rgb(44, 44, 44);
-  text-decoration: none;
-  text-decoration-color: #755e17;
-  transition: all 150ms ease-in-out;
-}
-
-.exp-link:hover {
-  text-decoration: underline 2px !important;
-  text-underline-offset: 5px;
-  opacity: 0.8;
-}
-
-@media (min-width: 768px) {
-  .exp-link {
-    font-size: 1.7rem;
-  }
-}
-
-/* Secciones */
-#Footer {
-  background-color: var(--color-bg-yellow);
-}
-
-#Footer {
-  font-size: large;
-  color: rgb(216, 216, 216);
-  background-color: #2b2b2b;
-}
-
-/* Animaciones */
-.animate__fadeInUp {
-  animation-delay: 1s;
-}
-
-.animate__fadeInLeft {
-  animation-delay: 2s;
-  margin-top: 200px;
-}
-
-@media (max-width: 309px) {
-  .btn-contact {
-    width: 100px;
-    font-size: 15px;
-  }
-}
-
-@media (min-width: 310px) {
-  .contact-data {
-    font-size: 20px;
-  }
-}
-
-@media (min-width: 500px) {
-  .contact-data {
-    font-size: 28px;
-  }
-}
-
-@media (min-width: 800px) {
-  .contact-data {
-    font-size: 40px;
-  }
-}
-
-.contact-data-title {
-  color: #a1a1a1;
-  font-size: 10px;
-}
-
-@media (min-width: 500px) {
-  .contact-data-title {
-    font-size: 18px;
-  }
-}
-
-@media (min-width: 800px) {
-  .contact-data-title {
-    font-size: 20px;
-  }
-}
-
-.cotact-social {
-  @media (max-width: 440px) {
-    flex-direction: column;
-  }
-}
-
-.contact-home-btn {
-  font-size: 1rem !important;
-  top: 105%;
-  left: 70%;
-}
-
-@media (min-width: 340px) {
-  .contact-home-btn {
-    left: 80%;
-  }
-}
-
-@media (min-width: 600px) {
-  .contact-home-btn {
-    top: 110%;
-    left: 90%;
-  }
-}
-
-@media (min-width: 1002px) {
-  .contact-home-btn {
-    font-size: 1.25rem !important;
-    left: 95%;
-  }
-}
-
-.img-fluid {
-  width: 100px !important;
-  height: 100px !important;
-}
-
-.navbar {
-  background-color: rgba(0, 0, 0, 0.07);
-  backdrop-filter: blur(3px);
-  height: 3.5rem;
-}
-
-#floatingTextarea {
-  min-height: 170px;
-}
-
-.nav-item {
-  transition: all 0.3s;
-}
-
-.nav-item:hover {
-  opacity: 0.8 !important;
-}
-
+/* Navbar hover effect */
 .nav-link {
   position: relative;
+  transition: all 0.5s;
+}
+
+.nav-link:hover {
+  opacity: 0.7;
   transition: all 0.5s;
 }
 
@@ -301,18 +174,7 @@ html {
   width: 100%;
 }
 
-.lng-btns {
-  color: white;
-}
-
-.lng-btns label {
-  color: gray;
-}
-
-.lng-btns label:hover {
-  color: white !important;
-}
-
+/* Skills hover effect */
 .skill-hover-effect {
   transition: filter 200ms ease-in-out;
   filter: grayscale(100%);
